--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     "permissions": [
         "activeTab",
         "storage",
-        "<all_urls>"
+        "<all_urls>",
+        "tabs"
     ]
 }
