--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,13 @@
        "scripts": ["popup.js"]
     },
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "icon128.png",
         "default_popup": "popup.html"
     },
+    "icons": {
+        "128": "icon128.png"
+    },
+    "options_page": "settings.html",
     "permissions": [
         "activeTab",
         "storage",
